updated dependencies to Scala 2.10, upgraded to sbt 0.12.1, fixed scala actor & lift actor test to stop them properly and avoid hanging up sbt build, removed tests that asks actors, replaced using of ParNewGC by ParallelGC which more widely used in production, removed thread based actor & queue implementations with tests